--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,8 +23,8 @@ email: oeren002@ucr.edu
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/cs234/" # the subpath of your site, e.g. /blog
 url: "https://ompedans.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  ompedans
 
 # Build settings
 theme: minima
